--- a/Shadow/Dockerfile
+++ b/Shadow/Dockerfile
@@ -1,6 +1,6 @@
 FROM quay.io/lyfe00011/test:beta
 
-RUN git clone https://github.com/fasweehkt/faztech /root/WhatsAsenaDuplicated
+RUN git clone https://github.com/fasweehkt/inrlbots /root/WhatsAsenaDuplicated
 WORKDIR /root/WhatsAsenaDuplicated/
 RUN yarn install --no-audit
 RUN git clone https://github.com/fasweehkt/uploads
